--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -74,24 +74,13 @@ jobs:
         run: printenv | sort -f
 
       - name: JFrog NPM Configuration
-        run: jf npm-config --repo-resolve=${{ env.JF_NPM_REMOTE_REPOSITORY }} --repo-deploy=${{ env.JF_NPM_LOCAL_REPOSITORY }}
         working-directory: ${{ env.JF_WORKING_DIRECTORY }}
-
-      - name: Install NPM dependencies
-        run: jf npm install --build-name ${{ env.JF_APP_NAME }} --build-number ${{ env.JF_PACKAGE_TAG }}
-        working-directory: ${{ env.JF_WORKING_DIRECTORY }}
-
-      - name: Add environment variables
-        run: jf rt bce --project ${{ env.JF_PROJECT }} ${{ env.JF_APP_NAME }} ${{ env.JF_PACKAGE_TAG }}
-        working-directory: ${{ env.JF_WORKING_DIRECTORY }}
-
-      - name: Add git information
-        run: jf rt bag --project ${{ env.JF_PROJECT }} ${{ env.JF_APP_NAME }} ${{ env.JF_PACKAGE_TAG }}
-        working-directory: ${{ env.JF_WORKING_DIRECTORY }}
-
-      - name: Pack and publish the npm package
-        run: jf npm publish --project ${{ env.JF_PROJECT }} --build-name ${{ env.JF_APP_NAME }} --build-number ${{ env.JF_PACKAGE_TAG }}
-
-      - name: Publish to Artifactory
-        run: jf rt bp --project ${{ env.JF_PROJECT }} ${{ env.JF_APP_NAME }} ${{ env.JF_PACKAGE_TAG }}
-        working-directory: ${{ env.JF_WORKING_DIRECTORY }}
+        run: |
+          jf npm-config --repo-resolve=${{ env.JF_NPM_REMOTE_REPOSITORY }} --repo-deploy=${{ env.JF_NPM_LOCAL_REPOSITORY }}
+          cat .npmrc   # debug - make sure it's created
+          jf npm install --build-name ${{ env.JF_APP_NAME }} --build-number ${{ env.JF_PACKAGE_TAG }}
+          jf rt bce --project ${{ env.JF_PROJECT }} ${{ env.JF_APP_NAME }} ${{ env.JF_PACKAGE_TAG }}
+          jf rt bag --project ${{ env.JF_PROJECT }} ${{ env.JF_APP_NAME }} ${{ env.JF_PACKAGE_TAG }}
+          jf npm publish --project ${{ env.JF_PROJECT }} --build-name ${{ env.JF_APP_NAME }} --build-number ${{ env.JF_PACKAGE_TAG }}
+          jf rt bp --project ${{ env.JF_PROJECT }} ${{ env.JF_APP_NAME }} ${{ env.JF_PACKAGE_TAG }}
+        
