--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: JFrog NPM Configuration
         run: |
-          cd 
+          cd ${{ env.JF_WORKING_DIRECTORY }}
           jf npm-config --repo-resolve=${{ env.JF_NPM_REMOTE_REPOSITORY }} --repo-deploy=${{ env.JF_NPM_LOCAL_REPOSITORY }}
           pwd
           cat .npmrc   # debug - make sure it's created
