DOTNET build and publish example

--- a/.github/workflows/dotnet-example.yml
+++ b/.github/workflows/dotnet-example.yml
@@ -16,7 +16,7 @@ jobs:
       JF_APP_NAME: ${{ vars.JF_APP_NAME }}
       JF_DOTNET_LOCAL_REPOSITORY: ${{ vars.JF_DOTNET_LOCAL_REPOSITORY }}
       JF_DOTNET_REMOTE_REPOSITORY: ${{ vars.JF_DOTNET_REMOTE_REPOSITORY }}
-      JF_PACKAGE_TAG: ${{ github.run_number }}_${{ github.run_id }}
+      JF_PACKAGE_TAG: T_${{ github.run_number }}_${{ github.run_id }}
       JF_DOTNET_VERSION: ${{ vars.JF_DOTNET_VERSION }}
       JF_WORKING_DIRECTORY: ${{ vars.JF_DOTNET_WORKING_DIRECTORY }}
     secrets:
