--- a/.github/workflows/npm-example.yml
+++ b/.github/workflows/npm-example.yml
@@ -16,7 +16,7 @@ jobs:
       JF_APP_NAME: ${{ vars.JF_APP_NAME }}
       JF_NPM_LOCAL_REPOSITORY: ${{ vars.JF_NPM_LOCAL_REPOSITORY }}
       JF_NPM_REMOTE_REPOSITORY: ${{ vars.JF_NPM_REMOTE_REPOSITORY }}
-      JF_PACKAGE_TAG: ${{ github.run_number }}_${{ github.run_id }}
+      JF_PACKAGE_TAG: T_${{ github.run_number }}_${{ github.run_id }}
       JF_WORKING_DIRECTORY: ${{ vars.JF_NPM_WORKING_DIRECTORY }}
     secrets:
       JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
