--- a/.github/workflows/npm-example.yml
+++ b/.github/workflows/npm-example.yml
@@ -1,4 +1,4 @@
-name: JFrog NPM Example
+name: Reusable JFrog NPM Example
 on:
   [workflow_dispatch]
 
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   JFrog-NPM-build-deploy:
-    uses: bkmgdotcom/project-examples/.github/workflows/_reusable-npm-build-publish.yml@main
+    uses: bkmgdotcom/project-examples/.github/workflows/_reusable-jfrog-npm-build-publish.yml@main
     with:
       RUNS_ON: ${{ vars.RUNS_ON }}
       JF_ARTIFACTORY_URL: ${{ vars.JF_ARTIFACTORY_URL }}
