--- a/.github/workflows/python-example.yml
+++ b/.github/workflows/python-example.yml
@@ -14,8 +14,7 @@ jobs:
       JF_ARTIFACTORY_URL: ${{ vars.JF_ARTIFACTORY_URL }}
       JF_PROJECT: ${{ vars.JF_PROJECT }}
       JF_APP_NAME: ${{ vars.JF_APP_NAME }}
-      JF_PYTHON_LOCAL_REPOSITORY: ${{ vars.JF_PYTHON_LOCAL_REPOSITORY }}
-      JF_PYTHON_REMOTE_REPOSITORY: ${{ vars.JF_PYTHON_REMOTE_REPOSITORY }}
+      JF_PYTHON_REPOSITORY: ${{ vars.JF_PYTHON_REPOSITORY }}
       JF_PYTHON_MODULE_NAME: ${{ vars.JF_PYTHON_MODULE_NAME }}
       JF_PACKAGE_TAG: T_${{ github.run_number }}_${{ github.run_id }}
       JF_WORKING_DIRECTORY: ${{ vars.JF_PYTHON_WORKING_DIRECTORY }}
