--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -1,5 +1,7 @@
 name: Sample Python GitHub
-on: workflow_dispatch
+on:
+  [workflow_dispatch]
+
 
 permissions:
   actions: read # for detecting the Github Actions environment.
