--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -109,5 +109,5 @@ jobs:
         digest: ${{ needs.build-publish-python.outputs.digest }}
         private-repository: true
       secrets:
-        registry-username: ${{ env.JF_USER_NAME }}
+        registry-username: ${{ vars.JF_USER_NAME }}
         registry-password: ${{ secrets.JF_ACCESS_TOKEN }}
