--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -56,13 +56,15 @@ jobs:
             - name: build project
               run: |                      
                 pwd
-                jf pip install -r requirements.txt  --module=${{ env.JF_PYTHON_MODULE_NAME }}
+                cd ${{ env.JF_WORKING_DIRECTORY }}
+                jf pip install -r requirements.txt  --module=${{ env.JF_PYTHON_MODULE_NAME }} 
                 python setup.py sdist bdist_wheel
                 cd dist && echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
 
             - name: publish python package
               run: |
-                jf rt u dist/ ${{ vars.JF_PYTHON_REPOSITORY }}/${{ env.JF_APP_NAME }}/ --module=${{ env.JF_PYTHON_MODULE_NAME }}
+                cd ${{ env.JF_WORKING_DIRECTORY }}
+                jf rt u dist/ ${{ vars.JF_PYTHON_REPOSITORY }}/${{ env.JF_APP_NAME }}/ --module=${{ env.JF_PYTHON_MODULE_NAME }} --project ${{ env.JF_PROJECT }} 
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
@@ -81,13 +83,16 @@ jobs:
               with:
                 push: true
                 platforms: linux/amd64 #, linux/arm64
-                tags: ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}     
-                
-                        
+                tags: ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}     
+                build-args: |
+                  JF_ARTIFACTORY_URL=${{ env.JF_ARTIFACTORY_URL }}
+                  JF_USER_NAME=${{ env.JF_USER_NAME }}
+                  JF_ACCESS_TOKEN=${{ secrets.JF_ACCESS_TOKEN }}
+
             - name: docker scan
               run: |  
-                 jf docker pull ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}
-                 jf docker scan ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}                               
+                 jf docker pull ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}    
+                 jf docker scan ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}                               
 
             - name: add docker package to build
               run: |  
