--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -21,7 +21,7 @@ jobs:
           JF_APP_NAME: ${{ vars.JF_APP_NAME }}
           JF_PROJECT: ${{ vars.JF_PROJECT }}
           JF_PYTHON_MODULE_NAME: ${{ vars.JF_PYTHON_MODULE_NAME }}
-          JF_PACKAGE_TAG: ${{ vars.JF_PACKAGE_TAG }}
+          JF_PACKAGE_TAG: T_${{ github.run_number }}_${{ github.run_id }}
           JF_WORKING_DIRECTORY: ${{ vars.JF_SOLENG_WORKING_DIRECTORY }}
         outputs:
           image: ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_PYTHON_REPOSITORY }}/${{ env.JF_APP_NAME }}
@@ -38,12 +38,13 @@ jobs:
                   
             - name: Checkout the repository    
               uses: actions/checkout@v4
-              
-           
+
             - name: configure jfrog environment
               run: |
                 cd ${{ env.JF_WORKING_DIRECTORY }}
                 jf pip-config --repo-resolve=${{ env.JF_PYTHON_REPOSITORY }}  
+                URL=$(echo ${{ vars.ARTIFACTORY_URL }} | sed 's|^https://||')
+                echo "JF_DOCKER_DOMAIN=$URL" >> $GITHUB_ENV
                 
             - name: configure environment
               run: |                      
@@ -64,7 +65,7 @@ jobs:
             - name: publish python package
               run: |
                 cd ${{ env.JF_WORKING_DIRECTORY }}
-                jf rt u dist/ ${{ vars.JF_PYTHON_REPOSITORY }}/${{ env.JF_APP_NAME }}/ --module=${{ env.JF_PYTHON_MODULE_NAME }} --project ${{ env.JF_PROJECT }} 
+                jf rt u dist/ ${{ env.JF_DOCKER_DOMAIN }}/${{ env.JF_APP_NAME }}/ --module=${{ env.JF_PYTHON_MODULE_NAME }} --project ${{ env.JF_PROJECT }} 
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
@@ -72,7 +73,7 @@ jobs:
             - name: Authenticate Docker
               uses: docker/login-action@v3
               with:
-                registry: ${{ env.JF_ARTIFACTORY_URL }}
+                registry: ${{ env.JF_DOCKER_DOMAIN }}
                 username: ${{ env.JF_USER_NAME }}
                 password: ${{ secrets.JF_ACCESS_TOKEN }}
     
@@ -83,7 +84,7 @@ jobs:
               with:
                 push: true
                 platforms: linux/amd64 #, linux/arm64
-                tags: ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}     
+                tags: ${{ env.JF_DOCKER_DOMAIN }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}     
                 build-args: |
                   JF_ARTIFACTORY_URL=${{ env.JF_ARTIFACTORY_URL }}
                   JF_USER_NAME=${{ env.JF_USER_NAME }}
@@ -91,12 +92,12 @@ jobs:
 
             - name: docker scan
               run: |  
-                 jf docker pull ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}    
-                 jf docker scan ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}                               
+                 jf docker pull ${{ env.JF_DOCKER_DOMAIN }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}    
+                 jf docker scan ${{ env.JF_DOCKER_DOMAIN }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}                               
 
             - name: add docker package to build
               run: |  
-                 echo "${{ env.JF_ARTIFACTORY_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
+                 echo "${{ env.JF_DOCKER_DOMAIN }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
                  jf rt build-docker-create ${{ env.JF_DOCKER_REPOSITORY }} --image-file metadata.json 
                  
             - name: publish build info
