--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -73,7 +73,7 @@ jobs:
             - name: Authenticate Docker
               uses: docker/login-action@v3
               with:
-                registry: ${{ env.JF_DOCKER_DOMAIN }}
+                registry: ${{ env.JF_ARTIFACTORY_URL }}
                 username: ${{ env.JF_USER_NAME }}
                 password: ${{ secrets.JF_ACCESS_TOKEN }}
     
