Add Python and Docker build

--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -54,7 +54,7 @@ jobs:
                 pip show setuptools
                 echo $VIRTUAL_ENV
                 echo "AABB"
-                echo $JF_DOCKER_DOMAIN
+                echo ${{ env.JF_DOCKER_DOMAIN }}
 
             - name: build project
               run: |                      
