Add Python and Docker build

--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -45,7 +45,8 @@ jobs:
                 jf pip-config --repo-resolve=${{ env.JF_PYTHON_REPOSITORY }}  
                 URL=$(echo ${{ vars.ARTIFACTORY_URL }} | sed 's|^https://||')
                 echo "JF_DOCKER_DOMAIN=$URL" >> $GITHUB_ENV
-                
+                echo "$URL"
+
             - name: configure environment
               run: |                      
                 pwd
