Add Python and Docker build

--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -43,7 +43,7 @@ jobs:
               run: |
                 cd ${{ env.JF_WORKING_DIRECTORY }}
                 jf pip-config --repo-resolve=${{ env.JF_PYTHON_REPOSITORY }}  
-                URL=$(echo ${{ JF_ARTIFACTORY_URL }} | sed 's|^https://||')
+                URL=$(echo ${{ env.JF_ARTIFACTORY_URL }} | sed 's|^https://||')
                 echo "JF_DOCKER_DOMAIN=$URL" >> $GITHUB_ENV
 
 
