--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -24,7 +24,7 @@ jobs:
           JF_PACKAGE_TAG: T_${{ github.run_number }}_${{ github.run_id }}
           JF_WORKING_DIRECTORY: ${{ vars.JF_SOLENG_WORKING_DIRECTORY }}
         outputs:
-          image: ${{ env.JF_ARTIFACTORY_URL }}/${{ env.JF_PYTHON_REPOSITORY }}/${{ env.JF_APP_NAME }}
+          image: ${{ env.JF_DOCKER_DOMAIN }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}
           digest: ${{ steps.build.outputs.digest }}
         steps:
             # Download the JFrog CLI and configure using JFrog Project and OIDC provider 
@@ -114,12 +114,14 @@ jobs:
               run: |            
                 cd ${{ env.JF_WORKING_DIRECTORY }}
                 jf build-scan --fail=false
-            
+        
+
     provenance:
+
       needs: [build-publish-python]
       uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v2.1.0
       with:
-        image:  ${{ env.JF_DOCKER_DOMAIN }}/${{ env.JF_DOCKER_REPOSITORY }}/${{ env.JF_APP_NAME }}:${{ env.JF_PACKAGE_TAG }}
+        image:  ${{ needs.build-publish-python.outputs.image }}
         digest: ${{ needs.build-publish-python.outputs.digest }}
         private-repository: true
       secrets:
