--- a/.github/workflows/sample-soleng-python-project.yml
+++ b/.github/workflows/sample-soleng-python-project.yml
@@ -114,10 +114,38 @@ jobs:
               run: |            
                 cd ${{ env.JF_WORKING_DIRECTORY }}
                 jf build-scan --fail=false
-        
+
+            - name: "Run analysis"
+              uses: ossf/scorecard-action@05b42c624433fc40578a4040d5cf5e36ddca8cde # v2.4.2
+              with:
+                results_file: results.sarif
+                results_format: sarif
+                # (Optional) Read-only PAT token. Uncomment the `repo_token` line below if:
+                # - you want to enable the Branch-Protection check on a *public* repository, or
+                # - you are installing Scorecards on a *private* repository
+                # To create the PAT, follow the steps in https://github.com/ossf/scorecard-action#authentication-with-pat.
+                # repo_token: ${{ secrets.SCORECARD_READ_TOKEN }}
+
+                # Publish the results for public repositories to enable scorecard badges. For more details, see
+                # https://github.com/ossf/scorecard-action#publishing-results.
+                # For private repositories, `publish_results` will automatically be set to `false`, regardless
+                # of the value entered here.
+                publish_results: true        
+            - name: "Upload artifact"
+              uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+              with:
+                name: SARIF file
+                path: results.sarif
+                retention-days: 5
+
+            # Upload the results to GitHub's code scanning dashboard.
+            - name: "Upload to code-scanning"
+              uses: github/codeql-action/upload-sarif@ce28f5bb42b7a9f2c824e633a3f6ee835bab6858 # v3.29.0
+              with:
+                sarif_file: results.sarif
+
 
     provenance:
-
       needs: [build-publish-python]
       uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v2.1.0
       with:
