--- a/msbuild-example/MsbuildExample/MsbuildExample.csproj
+++ b/msbuild-example/MsbuildExample/MsbuildExample.csproj
@@ -29,7 +29,7 @@
     <Exec Command="jfrog rt download repository/path/to/files destination\path\ $(BuildFlags)"/>
     -->
     
-    <Exec Command="jfrog rt download msbuild-local/MsbuildLibrary/bin/Debug/MsbuildLibrary.dll dependencies\ --flat=true $(BuildFlags)"/>
+    <Exec Command="jfrog rt download dis-4343-generic-local/MsbuildLibrary/bin/Debug/MsbuildLibrary.dll dependencies\ --flat=true $(BuildFlags)"/>
   </Target>
 
   <!-- <ItemGroup>
@@ -46,7 +46,7 @@
     <Exec Command="jfrog rt upload $(ArtifatsPatternPath) repository/destination/path $(BuildFlags)"/>
     -->
     
-    <Exec Command="jfrog rt upload $(ArtifatsPatternPath) msbuild-local/$(BuildName)/ --flat=false $(BuildFlags)"/>
+    <Exec Command="jfrog rt upload $(ArtifatsPatternPath) dis-4343-generic-local/$(BuildName)/ --flat=false $(BuildFlags)"/>
   </Target>
 
   <Target Name="PublishBuildInfo" AfterTargets="AfterBuild;UploadArtifacts" Condition=" '$(ArtifactoryPublish)' == 'true' ">
